@@ -1,3 +1,10 @@
+2008-09-17  Don Porter	<dgp@users.sourceforge.net>
+
+	* generic/tclInt.h:     Correct the TclGetLongFromObj,
+	TclGetIntFromObj, and TclGetIntForIndexM macros so that they
+	retrieve the internalRep.longValue field instead of casting the
+	internalRep.otherValuePtr field to type long.
+
 2008-09-17  Miguel Sofer  <msofer@users.sf.net>
 
 	* library/init.tcl: export min and max commands from the mathfunc
